--- a/.github/workflows/build_and_publish.yml
+++ b/.github/workflows/build_and_publish.yml
@@ -15,8 +15,8 @@ on:
 
   push:
     # Sequence of patterns matched against refs/heads
-    branches:
-      - main
+    # branches:
+    #   - main
     # Sequence of patterns matched against refs/tags
     tags:
       - v0.*
@@ -51,7 +51,7 @@ jobs:
         uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
         with:
           context: .
-          file: ./Dockerfile.alpine
+          file: ./Dockerfile
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
