--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "@types/bunyan": "^1.8.11",
     "@types/node": "^22.13.10",
     "nodemon": "^3.1.9"
+  },
+  "engines": {
+    "node": ">=22"
   }
 }
