--- a/package.json
+++ b/package.json
@@ -1,28 +1,27 @@
 {
   "name": "duckdb-api",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "description": "A DuckDB API",
-  "type": "module",
   "scripts": {
-    "build": "rm -rf dist/ && tsc --build src/",
+    "build": "rm -rf dist/ && tsc",
+    "build:docker": "scripts/download_extensions.sh && docker buildx build --platform linux/amd64 -t tobilg/duckdb-api .",
     "dev": "nodemon --exec tsx src/index.ts",
-    "serve": "nodemon --exec tsx src/index.ts",
     "format": "npx @biomejs/biome format --write src/",
     "lint": "npx @biomejs/biome lint --write --unsafe src/",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@hono/node-server": "^1.13.8",
+    "@hono/node-server": "^1.14.3",
     "bunyan": "^1.8.15",
-    "duckdb": "^1.2.0",
-    "hono": "^4.7.4",
-    "tsx": "^4.19.3",
-    "typescript": "^5.8.2"
+    "duckdb": "^1.3.0",
+    "hono": "^4.7.11"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
     "@types/bunyan": "^1.8.11",
-    "@types/node": "^22.13.10",
-    "nodemon": "^3.1.9"
+    "@types/node": "^22.15.29",
+    "nodemon": "^3.1.10",
+    "tsx": "^4.19.4",
+    "typescript": "^5.8.3"
   }
 }
