--- a/.github/workflows/build_and_publish.yml
+++ b/.github/workflows/build_and_publish.yml
@@ -34,6 +34,10 @@ jobs:
       - name: Check out the repo
         uses: actions/checkout@v4
 
+      - name: Download extensions
+        run: |
+          ./scripts/download_extensions.sh
+
       - name: Log in to Docker Hub
         uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
         with:
