--- a/package.json
+++ b/package.json
@@ -1,27 +1,28 @@
 {
   "name": "duckdb-api",
-  "version": "0.2.0",
+  "version": "1.3.1",
   "description": "A DuckDB API",
   "scripts": {
     "build": "rm -rf dist/ && tsc",
     "build:docker": "scripts/download_extensions.sh && docker buildx build --platform linux/amd64 -t tobilg/duckdb-api .",
     "dev": "nodemon --exec tsx src/index.ts",
+    "dev:docker": "docker run --rm -it -p 8080:3000 tobilg/duckdb-api",
     "format": "npx @biomejs/biome format --write src/",
     "lint": "npx @biomejs/biome lint --write --unsafe src/",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@hono/node-server": "^1.14.3",
+    "@hono/node-server": "^1.14.4",
     "bunyan": "^1.8.15",
-    "duckdb": "^1.3.0",
-    "hono": "^4.7.11"
+    "duckdb": "^1.3.1",
+    "hono": "^4.8.0"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
     "@types/bunyan": "^1.8.11",
     "@types/node": "^22.15.29",
     "nodemon": "^3.1.10",
-    "tsx": "^4.19.4",
+    "tsx": "^4.20.3",
     "typescript": "^5.8.3"
   }
 }
